[package]
name = "dstrombe-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.0-rc0"
oorandom = "11.1.3"
getrandom = "0.2.7"
glam = "0.21.3"
mint = "0.5.9"
chess = {git = "https://github.com/INDA22PlusPlus/castorm-chess.git"}
